RESOLVED FIXED24740
crash in RenderSlider::setPositionFromValue when calling pause() after setting <video> to display: none
https://bugs.webkit.org/show_bug.cgi?id=24740
Summary crash in RenderSlider::setPositionFromValue when calling pause() after settin...
Darin Adler
Reported 2009-03-21 08:22:50 PDT
The bug here is that RenderSlider::setPositionFromValue calls updateLayout, but that can cause the renderer to be destroyed. It’s not correct for a renderer to ever call updateLayout. That has to be called by the client before calling the renderer. Patch is on its way. <rdar://problem/6679873>
Attachments
test case (771 bytes, patch)
2009-03-21 08:30 PDT, Darin Adler
no flags
patch -- ready for review but doesn't have all the regression test updates (27.77 KB, patch)
2009-03-23 16:42 PDT, Darin Adler
hyatt: review+
Darin Adler
Comment 1 2009-03-21 08:30:22 PDT
Created attachment 28822 [details] test case
Darin Adler
Comment 2 2009-03-23 16:42:35 PDT
Created attachment 28874 [details] patch -- ready for review but doesn't have all the regression test updates
Dave Hyatt
Comment 3 2009-03-24 09:42:42 PDT
Comment on attachment 28874 [details] patch -- ready for review but doesn't have all the regression test updates Fix overflowHeight and overflowWidth calculations to be correct as discussed on IRC. r=me.
Darin Adler
Comment 4 2009-03-25 07:34:43 PDT
Note You need to log in before you can comment on or make changes to this bug.